refactor de codigos de errores en llamadas API y actualización yaml
